# llm-zoomcamp-homeworks

./: .gitignore  pyproject.toml
01_Introduction/: 01_intro.ipynb  02_rag-intro.ipynb  intro.ipynb  rag.py
