[project]
name = "llm-zoomcamp-homeworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=9.1.0",
    "ipywidgets>=8.1.7",
    "notebook==7.1.2",
    "ollama>=0.5.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
